# trace-deidentifier

./: .dockerignore  .env.default  .gitignore  Dockerfile  README.md  docker-compose.yml  gunicorn.conf.py  pyproject.toml
src/trace_deidentifier/anonymizer/: anonymizer.py  exceptions.py
src/trace_deidentifier/anonymizer/strategies/: base.py  detect_emails.py  detect_geolocations.py  detect_ipsv4.py  detect_ipsv6.py  regex_detect.py  remove_fields.py  removefields.py  replace_values.py  replacevalues.py
src/trace_deidentifier/api/: dependencies.py  exception_handler.py  main.py  schemas.py
src/trace_deidentifier/api/routers/: anonymize.py
src/trace_deidentifier/common/: exceptions.py  jsonencoder.py
src/trace_deidentifier/common/models/: trace.py
src/trace_deidentifier/common/utils/: utils_dict.py
src/trace_deidentifier/infrastructure/config/: contract.py  environment.py  settings.py
src/trace_deidentifier/infrastructure/logging/: loggable_mixin.py  loglevel.py  loguru.py
tests/: conftest.py
tests/anonymizer/: test_anonymizer.py
tests/anonymizer/strategies/: test_detectemails.py  test_detectgeolocation.py  test_detectipv4.py  test_detectipv6.py  test_removefields.py  test_replacevalues.py
tests/api/: test_exception_handler.py  test_main.py
tests/api/routers/: test_anonymize.py
tests/common/models/: test_trace.py
tests/common/utils/: test_utils_dict.py
tests/infrastructure/config/: test_settings.py
tests/infrastructure/logging/: test_loggable_mixin.py  test_loglevel.py  test_loguru.py
